[gd_scene load_steps=12 format=2]

[ext_resource path="res://menu/main.gd" type="Script" id=1]
[ext_resource path="res://fonts/zh-cn.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menu/intro/terrain_intro.tscn" type="PackedScene" id=3]
[ext_resource path="res://default_env.tres" type="Environment" id=4]
[ext_resource path="res://menu/menu_buttons.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/ja-jp.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://sound/music/Soliloquy.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 65
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=3]
length = 5.0
tracks/0/type = "transform"
tracks/0/path = NodePath("Camera")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray(  )
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 0.378929, 0.435276 ),
"update": 0,
"values": [ Vector3( 18.6938, 14.6576, -1.45224 ), Vector3( -7.07841, 6.01809, 51.5316 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 0.378929 ),
"update": 0,
"values": [ Vector3( -10.377, 131.972, -1.70936e-06 ), Vector3( -9.15329, 124.242, -2.83264 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "cam_mouv"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -7.07841, 6.01809, 51.5316 ), Vector3( -7.078, 6.018, 51.532 ), Vector3( -7.078, 6.018, 51.532 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, -2, 1 ),
"update": 0,
"values": [ Vector3( -9.15329, 124.242, -2.83264 ), Vector3( -8.5, 124, -2.8 ), Vector3( -9.153, 124.242, -2.833 ) ]
}

[node name="menu_connexion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.780392 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Princ" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titre_bienvenue" type="Label" parent="Princ"]
anchor_right = 1.0
margin_right = -7.0
margin_bottom = 283.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "bienvenue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_cliquer" type="Label" parent="Princ"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -135.0
margin_right = 2.0
custom_fonts/font = SubResource( 2 )
text = "cliquer lancer jeu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bouton_Connecter" type="TextureButton" parent="Princ"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_Buttons" parent="." instance=ExtResource( 5 )]

[node name="scene_intro" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="scene_intro"]
transform = Transform( -0.555328, -0.1586, 0.816368, -0.0487618, 0.986167, 0.158418, -0.830201, 0.0481665, -0.55538, -7.07838, 6.01808, 51.5316 )
environment = ExtResource( 4 )
current = true
fov = 60.0
near = 0.01
far = 70.0

[node name="DirectionalLight" type="DirectionalLight" parent="scene_intro"]
transform = Transform( 0.901334, 0.402839, -0.159113, -0.209116, 0.726452, 0.654628, 0.379298, -0.556765, 0.739016, -5.18582, 8.1373, 6.88304 )
light_energy = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="scene_intro"]
anims/Camera_deb = SubResource( 3 )
anims/cam_mouv = SubResource( 4 )

[node name="Terrain" parent="scene_intro" instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -19.855
autoplay = true
[connection signal="pressed" from="Princ/Bouton_Connecter" to="." method="_on_Bouton_Connecter_pressed"]
[connection signal="animation_finished" from="scene_intro/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
